--- a/style/style.css
+++ b/style/style.css
@@ -57,7 +57,6 @@ body{
 .input-box input:focus~label,
 .input-box input:valid~label{
     top: -5px;
-    
 }
 
 .input-box input{
@@ -71,8 +70,19 @@ body{
     color: black;
     font-weight: 540;
     padding:  0 35px 0 5px;
+}
 
-    
+#lpss{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+
+    font-size: 1.23em;
+    color: black;
+    font-weight: 540;
+    padding:  0 35px 0 5px;
 }
 
 .input-box .icon{
@@ -82,6 +92,14 @@ body{
     color: black;
     line-height: 57px;
 
+}
+
+#pss{
+    position: absolute;
+    right: 8px;
+    font-size: 1.2em;
+    color: black;
+    line-height: 57px;
 }
 
 
@@ -137,7 +155,7 @@ body{
 .login-register a{
     color: black;
     text-decoration: none;
-    font-size: 600;
+    font-size: 6;
 }
 
 .login-register p a:hover{
