--- a/style/style.css
+++ b/style/style.css
@@ -16,21 +16,42 @@ body{
     background: transparent;
     border: 2px solid rgb(0, 0, 0);
     border-radius: 20px;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(20px);
     box-shadow: 0 0 300px black;
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
-.wrapper .form-box{
+.wrapper .form-box,
+.wrapper .formboxrg{
     width: 100%;
     padding: 40px;
 }
 
-.form-box h2{
+.wrapper .icon-close{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 45px;
+    height: 45px;
+    background: rgb(14, 24, 36);
+    font-size: 2em;
+    color: #fff;
+    display: flex;
+    justify-content: center ;
+    align-items: center;
+    border-bottom-left-radius: 20px;
+    cursor: pointer;
+    z-index: 1;
+}
+
+
+.form-box h2,
+.formboxrg h2{
     font-size: 2.3em;
-    color: black;
+    color: rgb(14, 24, 36);
     text-align: center;
 }
 
@@ -38,7 +59,7 @@ body{
     position: relative;
     width: 100%;
     height: 50px;
-    border-bottom: 2px solid black ;
+    border-bottom: 2px solid rgb(14, 24, 36) ;
     margin: 30px 0px;
 }
 
@@ -48,7 +69,7 @@ body{
     left: 5px;
     transform: translateY(-50%) ;
     font-size: 1.3em;
-    color:black;
+    color:rgb(14, 24, 36);
     font-weight: 550;
     pointer-events: none;
 
@@ -67,7 +88,7 @@ body{
     outline: none;
 
     font-size: 1.23em;
-    color: black;
+    color: rgb(14, 24, 36);
     font-weight: 540;
     padding:  0 35px 0 5px;
 }
@@ -80,7 +101,7 @@ body{
     outline: none;
 
     font-size: 1.23em;
-    color: black;
+    color: rgb(14, 24, 36);
     font-weight: 540;
     padding:  0 35px 0 5px;
 }
@@ -89,7 +110,7 @@ body{
     position: absolute;
     right: 8px;
     font-size: 1.2em;
-    color: black;
+    color:rgb(14, 24, 36);
     line-height: 57px;
 
 }
@@ -98,14 +119,14 @@ body{
     position: absolute;
     right: 8px;
     font-size: 1.2em;
-    color: black;
+    color:rgb(14, 24, 36);
     line-height: 57px;
 }
 
 
 .remember{
     font-size: 1.14em;
-    color: black;
+    color: rgb(14, 24, 36);
     font-weight: 500;
     padding-top: 15px;
     margin: -15px 0 15px;
@@ -114,7 +135,7 @@ body{
 }
 
 .remember label input{
-    accent-color: black ;
+    accent-color: rgb(14, 24, 36) ;
     margin-right: 3px;
 }
 
@@ -132,7 +153,7 @@ body{
 .btn{
     width: 100%;
     height: 100%;
-    background: black;
+    background: rgb(14, 24, 36);
     border: none;
     outline: none;
     border-radius: 6px;
@@ -146,14 +167,14 @@ body{
 
 .login-register{
     font-size: .9em;
-    color: black;
+    color:rgb(14, 24, 36);
     text-align: center;
     font-weight: 500;
     margin: 25px 0 10px;
 }
 
 .login-register a{
-    color: black;
+    color: rgb(14, 24, 36);
     text-decoration: none;
     font-size: 6;
 }
@@ -163,4 +184,48 @@ body{
 }
 
 
+#phone{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+
+    font-size: 1.23em;
+    color: rgb(0, 0, 0);
+    font-weight: 540;
+    padding:  0 35px 0 5px;
+
+}
+
+#error-msg {
+    font-size: 0.9em;
+    margin-top: 10px;
+    color: rgb(35, 4, 4);
+}
+
+#terms-error{
+    font-size: 0.9em;
+    margin-top: 10px;
+    color: rgb(35, 4, 4);
+}
+
+
+.terms {
+    font-size: 1em;
+    margin-top: 15px;
+    color: black;
+}
+
+.terms a {
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+}
+
+.terms input[type="checkbox"] {
+    margin-right: 8px;
+}
+.formboxrg{
+    display: none;
+}
 
